--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,8 +1,8 @@
 Discovery Operations Guide:
   - text: Welcome
     href: /
-  - text: Discovery Cycle
-    href: /cycle/
+  - text: Setting Up
+    href: /setting-up/
   - text: Present
     href: /present/
   - text: Next Steps
