--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -3,8 +3,8 @@ Discovery Operations Guide:
     href: /
   - text: Setting Up
     href: /setting-up/
-  - text: Present
-    href: /present/
+  - text: Designing
+    href: /designing/
   - text: Next Steps
     href: /next/
   - text: Glossary
