--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -5,8 +5,10 @@ Discovery Operations Guide:
     href: /setting-up/
   - text: Designing
     href: /designing/
-  - text: Next Steps
-    href: /next/
+  - text: Communicating
+    href: /communicating/
+  - text: Proposing Implementation
+    href: /implementation/
   - text: Glossary
     href: /glossary/
 
